<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackerActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/user_image" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/country_bg"
        android:layout_width="66dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_bg_lightgray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/country_flag"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/country_bg"
        app:layout_constraintStart_toStartOf="@+id/country_bg"
        app:layout_constraintTop_toTopOf="@+id/country_bg">

        <ImageView
            android:id="@+id/wrap_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/country_flag" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/arrow_down"
        android:layout_width="29dp"
        android:layout_height="14dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@+id/country_bg"
        app:layout_constraintEnd_toEndOf="@+id/country_bg"
        app:layout_constraintTop_toTopOf="@+id/country_bg" />


    <View
        android:id="@+id/safety_tips_bg"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_bg_lightgray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image" />

    <ImageView
        android:id="@+id/doctor"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:contentDescription="@null"
        android:src="@drawable/doctor_illustration"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/safety_tips_bg"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/safety_tips_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/safety_tips"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/safety_tips_bg"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toEndOf="@+id/doctor"
        app:layout_constraintTop_toTopOf="@+id/safety_tips_bg" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:background="@color/lightGray"
        android:contentDescription="@null"
        android:layout_marginStart="7dp"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@+id/safety_tips_bg"
        app:layout_constraintStart_toEndOf="@+id/doctor"
        app:layout_constraintTop_toBottomOf="@+id/safety_tips_txt" />

    <View
        android:id="@+id/tab_bar_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_bg_brown"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safety_tips_bg" />

    <androidx.cardview.widget.CardView
        android:id="@+id/tracker_txt"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginVertical="5dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/tab_bar_bg"
        app:layout_constraintStart_toStartOf="@+id/tab_bar_bg"
        app:layout_constraintTop_toTopOf="@+id/tab_bar_bg" >

        <TextView
            android:id="@+id/track"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginVertical="7dp"
            android:text="@string/tracker"
            android:textColor="@color/black"
            android:textSize="18sp"/>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/symptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        android:textColor="@color/lightBrown"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tab_bar_bg"
        app:layout_constraintEnd_toEndOf="@+id/tab_bar_bg"
        app:layout_constraintStart_toEndOf="@+id/tracker_txt"
        app:layout_constraintTop_toTopOf="@+id/tab_bar_bg" />

    <TextView
        android:id="@+id/country_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tab_bar_bg"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/city_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="45dp"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/country_txt"
        app:layout_constraintTop_toBottomOf="@id/tab_bar_bg" />

    <TextView
        android:id="@+id/state_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textColor="@color/black"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/city_txt"
        app:layout_constraintTop_toBottomOf="@+id/tab_bar_bg" />

    <TextView
        android:id="@+id/worldwide_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worldwide"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toEndOf="@+id/state_txt"
        app:layout_constraintTop_toBottomOf="@+id/tab_bar_bg" />

    <View
        android:id="@+id/view"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_bg_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_txt" />

    <TextView
        android:id="@+id/confirmed_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmed"
        android:textSize="19sp"
        android:textColor="@color/red"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/confirmed_txt_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="2,37,395"
        android:textColor="@color/red"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/view3"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_bg_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/worldwide_txt" />

    <TextView
        android:id="@+id/active_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/active"
        android:textColor="@color/blue2"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/active_txt_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="1,17,408"
        android:textColor="@color/blue2"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3" />

    <View
        android:id="@+id/view2"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_bg_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/recovered_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/recovered"
        android:textColor="@color/green"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/recovered_txt_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1,13,325"
        android:textColor="@color/green"
        android:textSize="19sp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2" />

    <View
        android:id="@+id/view4"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:background="@drawable/rounded_bg_transparent_gray"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/deceased_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/deceased"
        android:textColor="@color/gray"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/deceased_txt_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6,650"
        android:textColor="@color/gray"
        android:textSize="19sp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4" />





</androidx.constraintlayout.widget.ConstraintLayout>


















































































